# lc3-ensemble

./: .gitignore  Cargo.toml  README.md  changelog.md
ensemble-cli/: Cargo.toml  main.rs
ensemble-test/: .gitignore  Cargo.toml  README.md  pyproject.toml
ensemble-test/src/: lib.rs
src/: asm.rs  ast.rs  err.rs  lexer.rs  lib.rs  os.asm  parse.rs  parser.rs  sim.rs
src/asm/: encoding.rs
src/ast/: asm.rs  mod.rs  sim.rs
src/parse/: lex.rs
src/sim/: debug.rs  io.rs  mem.rs  mod.rs  word.rs
src/sim/io/: queue.rs
