workspace = { members = ["ensemble-cli"] }
[package]
name = "lc3-ensemble"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "LC-3 parser, assembler, and simulator intended for Georgia Tech's CS 2110 course"
homepage = "https://github.com/endorpersand/lc3-ensemble/"
repository = "https://github.com/endorpersand/lc3-ensemble/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.12"
logos = "0.14.0"
rand = "0.8.5"
