[package]
name = "ensemble-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lc3-ensemble = { version = "0.1.0", path = "../" }
ariadne = "0.4.0"
clap = { version = "4.5.3", features = ["derive"] }

[[bin]]
name = "ensemble-cli"
path = "main.rs"
